--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
           <div class="current">
           <ul class="current-route">
                 <li class="bus main-route">60</li>
-                <li class="destination">Randolph / Harbour Dr</li>
+                <li class="destination">Randolph/Harbour Dr</li>
                 <li class="direction">Eastbound</li>
                 <li class="next-bus">Now</li>
-                <li class="frequency">Every 20 mins</li>
+                <li class="frequency">Every 20 min</li>
                 <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
           </ul>
         </div>
@@ -57,16 +57,16 @@
                 <li class="destination">Navy Pier</li>
                 <li class="direction">Southbound</li>
                 <li class="next-bus">5 min</li>
-                <li class="frequency">Every 10 minutes</li>
+                <li class="frequency">Every 10 min</li>
                 <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
           </ul>
 
           <ul class="route">
                 <li class="bus circle">J14</li>
-                <li class="destination">103rd / Stony Island</li>
+                <li class="destination">103rd/Stony Island</li>
                 <li class="direction">Southbound</li>
                 <li class="next-bus">7 min</li>
-                <li class="frequency">Every 15 minutes</li>
+                <li class="frequency">Every 15 min</li>
                 <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
           </ul>
 
@@ -75,16 +75,16 @@
                 <li class="destination">Navy Pier</li>
                 <li class="direction">Eastbound</li>
                 <li class="next-bus">10 min</li>
-                <li class="frequency">Every 10 minutes</li>
+                <li class="frequency">Every 10 min</li>
                 <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
           </ul>
 
           <ul class="route">
                 <li class="bus circle">151</li>
-                <li class="destination">Devon / Clark</li>
+                <li class="destination">Devon/Clark</li>
                 <li class="direction">Northbound</li>
                 <li class="next-bus">11 min</li>
-                <li class="frequency">Every 16 mins</li>
+                <li class="frequency">Every 16 min</li>
                 <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
           </ul>
 
@@ -108,7 +108,7 @@
 
           <ul class="route" >
                 <li class="bus circle">157</li>
-                <li class="destination">Streeterville / Taylor</li>
+                <li class="destination">Streeterville/Taylor</li>
                 <li class="direction out-of-service">Out of Service</li>
                 <li class="next-bus out-of-service">-</li>
                 <li class="frequency out-of-service">Resumes 6:00am</li>
