--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li class="status-bar-items">
               <h3 class="mobile-battery">76%</h3></li>
             <li class="status-bar-items">
-              <i class="fas fa-battery-three-quarters" style="font-size:1.2em;"></i></li>
+              <i class="fas fa-battery-three-quarters" style="font-size:1em;"></i></li>
          </ul>
        </section>
 
@@ -40,92 +40,123 @@
       </section>
 
       <section class="content">
-        <div>
-          <div class="current">
-          <ul class="current-route">
-                <li class="bus main-route">60</li>
-                <li class="destination">Randolph/Harbour Dr</li>
-                <li class="direction">Eastbound</li>
-                <li class="next-bus">Now</li>
-                <li class="frequency">Every 20 min</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
-        </div>
+          <div class="current-route">
+            <div class="current-grid-container">
+                <div class="item1 bus current-circle">60</div>
+                <div class="item2 destination">Randolph/Harbour Dr</div>
+                <div class="item3 direction">Eastbound</div>
+                <div class="item4 next-bus">Now</div>
+                <div class="item5 frequency">Every 20 min</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+            </div>
+          </div>
 
-          <ul class="route">
-                <li class="bus circle">124</li>
-                <li class="destination">Navy Pier</li>
-                <li class="direction">Southbound</li>
-                <li class="next-bus">5 min</li>
-                <li class="frequency">Every 10 min</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+          <div class="route">
+            <div class="grid-container">
+                <div class="item1 bus circle">124</div>
+                <div class="item2 destination">Navy Pier</div>
+                <div class="item3 direction">Southbound</div>
+                <div class="item4 next-bus">5 min</div>
+                <div class="item5 frequency">Every 10 min</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+            </div>
+          </div>
 
-          <ul class="route">
-                <li class="bus circle">J14</li>
-                <li class="destination">103rd/Stony Island</li>
-                <li class="direction">Southbound</li>
-                <li class="next-bus">7 min</li>
-                <li class="frequency">Every 15 min</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+          <div class="route">
+            <div class="grid-container">
+                <div class="item1 bus circle">114</div>
+                <div class="item2 destination">103rd/Stony Island</div>
+                <div class="item3 direction">Southbound</div>
+                <div class="item4 next-bus">7 min</div>
+                <div class="item5 frequency">Every 15 min</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+            </div>
+          </div>
 
-          <ul class="route">
-                <li class="bus circle">124</li>
-                <li class="destination">Navy Pier</li>
-                <li class="direction">Eastbound</li>
-                <li class="next-bus">10 min</li>
-                <li class="frequency">Every 10 min</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+          <div class="route">
+              <div class="grid-container">
+                <div class="item1 bus circle">124</div>
+                <div class="item2 destination">Navy Pier</div>
+                <div class="item3 direction">Eastbound</div>
+                <div class="item4 next-bus">10 min</div>
+                <div class="item5 frequency">Every 10 min</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+              </div>
+            </div>
 
-          <ul class="route">
-                <li class="bus circle">151</li>
-                <li class="destination">Devon/Clark</li>
-                <li class="direction">Northbound</li>
-                <li class="next-bus">11 min</li>
-                <li class="frequency">Every 16 min</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+            <div class="route">
+              <div class="grid-container">
+                <div class="item1 bus circle">151</div>
+                <div class="item2 destination">Devon/Clark</div>
+                <div class="item3 direction">Northbound</div>
+                <div class="item4 next-bus">11 min</div>
+                <div class="item5 frequency">Every 16 min</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+              </div>
+            </div>
 
-          <ul class="route">
-                <li class="bus circle">4</li>
-                <li class="destination">Cottage Grove</li>
-                <li class="direction out-of-service">Out of service</li>
-                <li class="next-bus out-of-service">-</li>
-                <li class="frequency out-of-service">Resumes 12:10am</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+            <div class="route">
+              <div class="grid-container">
+                <div class="item1 bus circle">4</div>
+                <div class="item2 destination">Cottage Grove</div>
+                <div class="item3 direction out-of-service">Out of service</div>
+                <div class="item4 next-bus out-of-service">-</div>
+                <div class="item5 frequency out-of-service">Resumes 12:10am</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+              </div>
+            </div>
 
-          <ul class="route">
-                <li class="bus circle">20</li>
-                  <li class="destination">Madison</li>
-                  <li class="direction out-of-service">Out of service</li>
-                  <li class="next-bus out-of-service">-</li>
-                  <li class="frequency out-of-service">Resumes 12:10am</li>
-                  <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+            <div class="route">
+              <div class="grid-container">
+                <div class="item1 bus circle">20</div>
+                <div class="item2 destination">Madison</div>
+                <div class="item3 direction out-of-service">Out of service</div>
+                <div class="item4 next-bus out-of-service">-</div>
+                <div class="item5 frequency out-of-service">Resumes 12:10am</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+              </div>
+            </div>
 
-          <ul class="route" >
-                <li class="bus circle">157</li>
-                <li class="destination">Streeterville/Taylor</li>
-                <li class="direction out-of-service">Out of Service</li>
-                <li class="next-bus out-of-service">-</li>
-                <li class="frequency out-of-service">Resumes 6:00am</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-          </ul>
+            <div class="route">
+              <div class="grid-container">
+                <div class="item1 bus circle">157</div>
+                <div class="item2 destination">Streeterville/Taylor</div>
+                <div class="item3 direction out-of-service">Out of service</div>
+                <div class="item4 next-bus out-of-service">-</div>
+                <div class="item5 frequency out-of-service">Resumes 6:00am</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+              </div>
+            </div>
 
-          <ul class="route">
-                <li class="bus circle">6X</li>
-                <li class="destination">Jackson Park Express</li>
-                <li class="direction reroute">Reroute</li>
-                <li class="next-bus reroute">-</li>
-                <li class="frequency reroute">-</li>
-                <li class="learn-more-arrow"><i class="fas fa-chevron-right"></i></li>
-
-          </ul>
-
-        </div>
+            <div class="route">
+              <div class="grid-container">
+                <div class="item1 bus circle">6X</div>
+                <div class="item2 destination">Jackson Park Express</div>
+                <div class="item3 direction reroute">Reroute</div>
+                <div class="item4 next-bus reroute">-</div>
+                <div class="item5 frequency reroute">-</div>
+                <div class="item6">
+                  <i class="learn-more-arrow fas fa-chevron-right"></i>
+                </div>
+              </div>
+            </div>
+        </section>
 
       <section class="bottom-navbar">
         <i class="fas fa-exclamation-circle"></i>
