--- a/index.html
+++ b/index.html
@@ -6,27 +6,15 @@
     <title>BusyBus App</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/81ac5834bc.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <section class = "container">
        <section class="status-bar">
-         <ul>
-            <li class="status-bar-items">
-              <i class="fas fa-signal" style="font-size:.75em;"></i></li>
-            <li class="status-bar-items">
-              <h3 class="mobile-service">GS</h3></li>
-            <li class="status-bar-items">
-              <i class="fas fa-wifi" style="font-size:.85em;"></i></li>
-            <li class="status-bar-items">
-              <h3 class="mobile-time">9:41 AM</h3></li>
-            <li class="status-bar-items">
-              <h3 class="mobile-battery">76%</h3></li>
-            <li class="status-bar-items">
-              <i class="fas fa-battery-three-quarters" style="font-size:1em;"></i></li>
-         </ul>
+          <img src="images/time.png" class="status-time" alt="Status Time" height="33">
+          <img src="images/icons.png" class="status-icons" alt="Status Icons" height="33">
        </section>
 
        <nav>
@@ -40,122 +28,122 @@
       </section>
 
       <section class="content">
-          <div class="current-route">
-            <div class="current-grid-container">
-                <div class="item1 bus current-circle">60</div>
-                <div class="item2 destination">Randolph/Harbour Dr</div>
-                <div class="item3 direction">Eastbound</div>
-                <div class="item4 next-bus">Now</div>
-                <div class="item5 frequency">Every 20 min</div>
-                <div class="item6">
+          <section class="current-route">
+            <ul class="current-grid-container">
+                <li class="item1 bus current-circle">60</li>
+                <li class="item2 destination">Randolph/Harbour Dr</li>
+                <li class="item3 direction">Eastbound</li>
+                <li class="item4 next-bus">Now</li>
+                <li class="item5 frequency">Every 20 min</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-            </div>
-          </div>
+                </li>
+            </ul>
+          </section>
 
-          <div class="route">
-            <div class="grid-container">
-                <div class="item1 bus circle">124</div>
-                <div class="item2 destination">Navy Pier</div>
-                <div class="item3 direction">Southbound</div>
-                <div class="item4 next-bus">5 min</div>
-                <div class="item5 frequency">Every 10 min</div>
-                <div class="item6">
+          <section class="route">
+            <ul class="grid-container">
+                <li class="item1 bus circle">124</li>
+                <li class="item2 destination">Navy Pier</li>
+                <li class="item3 direction">Southbound</li>
+                <li class="item4 next-bus">5 min</li>
+                <li class="item5 frequency">Every 10 min</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-            </div>
-          </div>
+                </li>
+            </ul>
+          </section>
 
-          <div class="route">
-            <div class="grid-container">
-                <div class="item1 bus circle">114</div>
-                <div class="item2 destination">103rd/Stony Island</div>
-                <div class="item3 direction">Southbound</div>
-                <div class="item4 next-bus">7 min</div>
-                <div class="item5 frequency">Every 15 min</div>
-                <div class="item6">
+          <section class="route">
+            <ul class="grid-container">
+                <li class="item1 bus circle">114</li>
+                <li class="item2 destination">103rd/Stony Island</li>
+                <li class="item3 direction">Southbound</li>
+                <li class="item4 next-bus">7 min</li>
+                <li class="item5 frequency">Every 15 min</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-            </div>
-          </div>
+                </li>
+            </ul>
+          </section>
 
-          <div class="route">
-              <div class="grid-container">
-                <div class="item1 bus circle">124</div>
-                <div class="item2 destination">Navy Pier</div>
-                <div class="item3 direction">Eastbound</div>
-                <div class="item4 next-bus">10 min</div>
-                <div class="item5 frequency">Every 10 min</div>
-                <div class="item6">
+          <section class="route">
+              <ul class="grid-container">
+                <li class="item1 bus circle">124</li>
+                <li class="item2 destination">Navy Pier</li>
+                <li class="item3 direction">Eastbound</li>
+                <li class="item4 next-bus">10 min</li>
+                <li class="item5 frequency">Every 10 min</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </section>
 
-            <div class="route">
-              <div class="grid-container">
-                <div class="item1 bus circle">151</div>
-                <div class="item2 destination">Devon/Clark</div>
-                <div class="item3 direction">Northbound</div>
-                <div class="item4 next-bus">11 min</div>
-                <div class="item5 frequency">Every 16 min</div>
-                <div class="item6">
+            <section class="route">
+              <ul class="grid-container">
+                <li class="item1 bus circle">151</li>
+                <li class="item2 destination">Devon/Clark</li>
+                <li class="item3 direction">Northbound</li>
+                <li class="item4 next-bus">11 min</li>
+                <li class="item5 frequency">Every 16 min</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </section>
 
-            <div class="route">
-              <div class="grid-container">
-                <div class="item1 bus circle">4</div>
-                <div class="item2 destination">Cottage Grove</div>
-                <div class="item3 direction out-of-service">Out of service</div>
-                <div class="item4 next-bus out-of-service">-</div>
-                <div class="item5 frequency out-of-service">Resumes 12:10am</div>
-                <div class="item6">
+            <section class="route">
+              <ul class="grid-container">
+                <li class="item1 bus circle">4</li>
+                <li class="item2 destination">Cottage Grove</li>
+                <li class="item3 direction out-of-service">Out of service</li>
+                <li class="item4 next-bus out-of-service">-</li>
+                <li class="item5 frequency out-of-service">Resumes 12:10am</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </section>
 
-            <div class="route">
-              <div class="grid-container">
-                <div class="item1 bus circle">20</div>
-                <div class="item2 destination">Madison</div>
-                <div class="item3 direction out-of-service">Out of service</div>
-                <div class="item4 next-bus out-of-service">-</div>
-                <div class="item5 frequency out-of-service">Resumes 12:10am</div>
-                <div class="item6">
+            <section class="route">
+              <ul class="grid-container">
+                <li class="item1 bus circle">20</li>
+                <li class="item2 destination">Madison</li>
+                <li class="item3 direction out-of-service">Out of service</li>
+                <li class="item4 next-bus out-of-service">-</li>
+                <li class="item5 frequency out-of-service">Resumes 12:10am</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </section>
 
-            <div class="route">
-              <div class="grid-container">
-                <div class="item1 bus circle">157</div>
-                <div class="item2 destination">Streeterville/Taylor</div>
-                <div class="item3 direction out-of-service">Out of service</div>
-                <div class="item4 next-bus out-of-service">-</div>
-                <div class="item5 frequency out-of-service">Resumes 6:00am</div>
-                <div class="item6">
+            <section class="route">
+              <ul class="grid-container">
+                <li class="item1 bus circle">157</li>
+                <li class="item2 destination">Streeterville/Taylor</li>
+                <li class="item3 direction out-of-service">Out of service</li>
+                <li class="item4 next-bus out-of-service">-</li>
+                <li class="item5 frequency out-of-service">Resumes 6:00am</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </section>
 
-            <div class="route">
-              <div class="grid-container">
-                <div class="item1 bus circle">6X</div>
-                <div class="item2 destination">Jackson Park Express</div>
-                <div class="item3 direction reroute">Reroute</div>
-                <div class="item4 next-bus reroute">-</div>
-                <div class="item5 frequency reroute">-</div>
-                <div class="item6">
+            <section class="route">
+              <ul class="grid-container">
+                <li class="item1 bus circle">6X</li>
+                <li class="item2 destination">Jackson Park Express</li>
+                <li class="item3 direction reroute">Reroute</li>
+                <li class="item4 next-bus reroute">-</li>
+                <li class="item5 frequency reroute">-</li>
+                <li class="item6">
                   <i class="learn-more-arrow fas fa-chevron-right"></i>
-                </div>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </section>
         </section>
 
       <section class="bottom-navbar">
