--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <body>
     <section class = "container">
        <section class="status-bar">
-          <img src="images/time.png" class="status-time" alt="Status Time" height="33">
-          <img src="images/icons.png" class="status-icons" alt="Status Icons" height="33">
+          <img src="images/time.png" align="left" class="status-time" alt="Status Time" height="33">
+          <img src="images/icons.png" align="right" class="status-icons" alt="Status Icons" height="33">
        </section>
 
        <nav>
